--- a/css/admin_dasboard.css
+++ b/css/admin_dasboard.css
@@ -360,3 +360,94 @@ nav .dropdown .dropbtn:hover {
 .status-declined {
   background-color: #dc3545; /* red */
 }
+
+/* Style for the zoomed image */
+.zoomed-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9); /* Semi-transparent background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* Ensure it's above other content */
+}
+
+/* Style for the zoomed image */
+.zoomed-image img {
+  max-width: 100%; /* Adjust as needed */
+  max-height: 100%; /* Adjust as needed */
+  border-radius: 10px; /* Optional: add rounded corners */
+  cursor: pointer; /* Change cursor to pointer when hovered */
+}
+
+td.receipt {
+  height: 20px;
+}
+/* Add this CSS to your existing stylesheet */
+.receipt-image {
+  max-width: 100px; /* Adjust as needed */
+  cursor: pointer;
+}
+
+.modal-body {
+  text-align: center;
+}
+
+.modal-body img {
+  max-width: 100%;
+  height: auto;
+}
+
+.seat-map-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.seat-section {
+  margin-bottom: 20px;
+}
+
+.seat-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+/* Add this CSS to your existing stylesheet */
+.seat {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #c0c0c0; /* Default color */
+  text-align: center;
+  line-height: 40px;
+  margin: 5px;
+}
+
+.seat.occupied {
+  background-color: red;
+}
+
+.selected {
+  background-color: red; /* Change the background color to red */
+  color: white; /* Change the text color to white for better visibility */
+}
+
+
+.middle-line {
+  width: 2px;
+  height: 100px;
+  background-color: #000;
+  margin: 0 auto; /* Center the line horizontally */
+  margin-bottom: 20px; /* Adjust margin as needed */
+}
+.seat {
+  cursor: pointer;
+}
