--- a/css/flights.css
+++ b/css/flights.css
@@ -302,7 +302,7 @@ footer {
               -1px 1px 0 #000, 
                1px 1px 0 #000;
 }
-.Cebu-pacific{
+.cebu-pacific{
   font-size: 34px;
   color: white;
   text-shadow: -1px -1px 0 #000,  
