--- a/css/flights.css
+++ b/css/flights.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #b8b8b8;
+  background-color: #cecece;
 }
 /* Style for the table */
 table {
@@ -306,7 +306,7 @@ footer {
   font-size: 38px; /* Larger font size */
   color: rgba(220, 20, 60, 1); /* Font color matches the gradient Crimson */
   font-weight: 700; /* Bolder text */
-  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3); /* More pronounced text shadow */
+  text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3); /* More pronounced text shadow */
   border-radius: 10px; /* More rounded corners */
 }
 
@@ -318,9 +318,9 @@ footer {
   padding-top: 40px;
   padding-bottom: 40px;
   font-size: 38px; /* Larger font size */
-  color: rgba(255, 165, 0, 1); /* Font color matches the gradient Orange */
+  color: rgb(255, 238, 0); /* Font color matches the gradient Orange */
   font-weight: 700; /* Bolder text */
-  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3); /* More pronounced text shadow */
+  text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3); /* More pronounced text shadow */
   border-radius: 10px; /* More rounded corners */
 }
 /* Logo Styling */
