--- a/css/admin_dasboard.css
+++ b/css/admin_dasboard.css
@@ -422,24 +422,16 @@ td.receipt {
 /* Add this CSS to your existing stylesheet */
 .seat {
   display: inline-block;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
   background-color: #c0c0c0; /* Default color */
   text-align: center;
   line-height: 40px;
   margin: 5px;
+  padding-top: 5px;
+  cursor: pointer;
 }
-
-.seat.occupied {
-  background-color: red;
-}
-
-.selected {
-  background-color: red; /* Change the background color to red */
-  color: white; /* Change the text color to white for better visibility */
-}
-
 
 .middle-line {
   width: 2px;
@@ -448,6 +440,31 @@ td.receipt {
   margin: 0 auto; /* Center the line horizontally */
   margin-bottom: 20px; /* Adjust margin as needed */
 }
-.seat {
-  cursor: pointer;
+
+
+.seat.occupied {
+  background-color: #ff6666;
+}
+.seat.selected {
+  background-color: #66ff66;
+}
+
+.seat-section {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
+}
+.seat-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.aisle {
+  width: 50px; /* Adjust as needed */
+}
+
+.seat-section.first-class, .seat-section.business-class, .seat-section.economy-class {
+  display: flex;
+  flex-direction: column;
 }
