--- a/css/admin_ui_css/flight.css
+++ b/css/admin_ui_css/flight.css
@@ -2,20 +2,21 @@ body{
     background-color: #b9b4b4;
   }
 
-.analytics {
+  .analytics {
+    max-width: 95%;
+    margin: 150px auto 30px auto; /* top margin, auto for horizontal centering, bottom margin */
+    background-color: #f2f2f2;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     border-radius: 50px;
     text-align: center;
-    margin-top: 150px;
-    margin-bottom: 30px;
     height: 150px;
     font-size: 50px;
     color: white;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
-  }
+}
   
   .anal-logo {
     height:100px;
@@ -62,16 +63,16 @@ body{
   cursor: pointer;
 }
 
-  .h1-anal {
-    font-size: 100px;
-    cursor: pointer;
-    font-family: monospace;
-    text-shadow: 
-          -1px -1px 0 #000,  
-           1px -1px 0 #000,
-          -1px  5px 0 #000,  
-           15px  5px 0 #000;
-  }
+.h1-anal {
+  font-size: 70px; /* Adjusted for better balance */
+  font-family: 'Oswald', sans-serif;
+  color: #333;
+  padding: 20px;
+  margin: 20px 0;
+  text-align: center; /* Center-align the text */
+  text-transform: uppercase; /* Make the text uppercase for better emphasis */
+  letter-spacing: 2px; /* Add some letter spacing for readability */
+}
   
 .header1{
     position: fixed;
