--- a/css/admin_ui_css/user.css
+++ b/css/admin_ui_css/user.css
@@ -19,20 +19,20 @@ body{
 }
 
 .analytics {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50px;
-    text-align: center;
-    margin-top: 150px;
-    margin-bottom: 30px;
-    height: 150px;
-    font-size: 50px;
-    color: white;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
-  }
-  
+  max-width: 95%;
+  margin: 150px auto 30px auto; /* top margin, auto for horizontal centering, bottom margin */
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+  text-align: center;
+  height: 150px;
+  font-size: 50px;
+  color: white;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+}
   .anal-logo {
     height:100px;
     width: 100px;
@@ -41,15 +41,16 @@ body{
   }
   
   .h1-anal {
-    font-size: 100px;
-    cursor: pointer;
-    font-family: monospace;
-    text-shadow: 
-          -1px -1px 0 #000,  
-           1px -1px 0 #000,
-          -1px  5px 0 #000,  
-           15px  5px 0 #000;
+    font-size: 70px; /* Adjusted for better balance */
+    font-family: 'Oswald', sans-serif;
+    color: #333;
+    padding: 20px;
+    margin: 20px 0;
+    text-align: center; /* Center-align the text */
+    text-transform: uppercase; /* Make the text uppercase for better emphasis */
+    letter-spacing: 2px; /* Add some letter spacing for readability */
   }
+
   .table-container {
     max-width: 1100px; /* Adjust as needed */
     margin: 0 auto; /* Center the table */
